# Graduatework

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
